# OpenGL-Demo

./: CMakeLists.txt  FPScamera.h  README.md  cameraUtils.h  circleCamera.h  genericFrag.glsl  genericVert.glsl  glad.c  main.cpp  shader.h
shaders/: genericFrag.glsl  genericFrag2.glsl  genericVert.glsl  textureFrag.glsl  textureVert.glsl
